# banana-slides

./: .env.example  .gitignore  LICENSE  README.md  README_EN.md  check_and_fix_config.sh  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml  reset_database.sh  test_api_connection.py  test_image_generation.py
.claude/: settings.local.json
.githooks/: pre-commit
.github/workflows/: ci-test.yml  docker-publish.yml  nightly-e2e.yml
backend/: Dockerfile  README.md  alembic.ini  app.py  config.py  create_migration.sh  entrypoint.sh  gunicorn.conf.py  worker.py
backend/controllers/: __init__.py  admin_controller.py  auth_controller.py  export_controller.py  material_controller.py  page_controller.py  points_controller.py  premium_controller.py  project_controller.py  reference_file_controller.py  referral_controller.py  settings_controller.py  template_controller.py  user_settings_controller.py
backend/middleware/: __init__.py  auth.py
backend/migrations/: __init__.py  migrate_to_multi_user.py
backend/models/: __init__.py  daily_usage.py  email_verification.py  page_image_version.py  points.py  project.py  recharge_code.py  referral.py  system_settings.py  user.py  user_settings.py  user_template.py
backend/services/: __init__.py  ai_service.py  ai_service_manager.py  prompts.py  (+11 more)
docs/: PRD_积分体系改造.md  多用户体系完整设计方案.md
frontend/: .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
scripts/: export_editable_pptx.py  setup_git_hooks.sh  translate_readme.py  verify-e2e-refactoring.sh
(+76 files in other folders)
